# pro-billing

./: .gitignore  README.md  pyproject.toml  tailwind.config.js
.github/workflows/: deps.yml  test.yml
app/: github.py  hosts.py  pypi_urls.py  settings.py  templatemail.py  urls.py  views.py
app/projects/: admin.py  models.py  urls.py  views.py
app/projects/migrations/: 0001_initial.py  0002_project_stripe_id.py  0003_project_github_usernames.py  0004_alter_project_github_usernames.py  0005_project_status.py  0006_project_pro_private_key_project_pro_public_key.py  0007_project_packages_token.py  0008_alter_project_name_alter_project_packages_token.py  0009_slugify.py  0010_alter_project_name.py  0011_remove_project_pro_private_key_and_more.py  0012_alter_project_options.py  0013_alter_project_options.py
app/projects/templates/projects/: license_terms.html  project_form.html  project_keys.html  project_list.html  project_terms.html  project_token.html
app/teams/: models.py
app/teams/migrations/: 0001_initial.py  0002_team_stripe_id.py
app/templates/: base.html
app/users/: models.py  views.py
app/users/migrations/: 0001_initial.py  0002_user_uuid_alter_user_email.py  0003_user_packages_token.py
