[tool.poetry]
name = "project"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"

forge = "^0.17.0"
forge-pro = "^0.2.0"

PyJWT = "^2.3.0"
cryptography = "^42.0.2"
django-hosts = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "forgepackages"
url = "https://pypi.forgepackages.com/"
